fix: change spacing.

--- a/resources/css/article.css
+++ b/resources/css/article.css
@@ -18,7 +18,7 @@ article.article {
     }
 
     & h3 {
-        @apply mt-12;
+        @apply mt-8;
     }
 
     & p {
